Commit some uncommitted fixes